--- a/Views/Home/Juegos.cshtml
+++ b/Views/Home/Juegos.cshtml
@@ -6,3 +6,4 @@
 
 <img src="@ViewBag.usuario.fotoPerfil" alt="Foto de perfil" class="profile-picture" />
 
+<!--aca habria que meter un carrouserl de cards donde los botones te mandan a la preview de un juego especifico-->
