--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -15,7 +15,7 @@
 <a href='@Url.Action("Actividades", "Home")' class="botonComenzarAct">Comenzar Actividad</a>
 </div>
 
-
+//estoy hay que ponerlo en un carousel
 <div class ="ActividadesPendientes ">
 <h2>Tareas Pendientes: </h2>
 <div class =" cardsActPendeintes">
@@ -27,7 +27,17 @@
 
 }
 </div>
+<div class ="ir a Chats">
+<h2>¿Ya hablaste con alguien hoy?</h2>
+<img src="~/Content/Images/fotoChats.png" alt="Logo Tandem" class="nav-logo">
+<a href='@Url.Action("Actividades", "Home")' class="botonComenzarAct">Habla Ahora</a>
+</div>
 
 
+</div>
+<div class ="Contactanos">
+<h2>¿Estamos para ayudarte!!! </h2>
+<a href='@Url.Action("Actividades", "Home")' class="botonComenzarAct">Contactanos</a>
+</div>
 </div>
 </body>
