--- a/Views/Home/previewJuego.cshtml
+++ b/Views/Home/previewJuego.cshtml
@@ -2,4 +2,4 @@
     ViewData["Title"] = "previewJuego";
 }
 <!-- aca se mnuestra la preview del juego con el boton de jugar directamente-->
-<a href= '@Url.Action("jugarOrdenarPictograma", Home)'>
+<a href= '@Url.Action("jugarOrdenarPictograma", "Home")'>i,mjnuhbpbiubiudniujgdrngikjb</a>
