falta terminar la home, benji el css, lesan subir su carousel, ilu y mate subir lo de act

--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -72,7 +72,7 @@
         
         }
         
-        @if (ViewBag.usuario.tipoUsuario == "responsable")
+        @if (ViewBag.usuario.tipoUsuario == "responsable") //poner todo esto tmb en una view de mis pertenecientes post jueves asi no surgen mas errores 
         {
             <section class="Perfil_Relaciones">
                 <h3>Mis Pertenecientes Vinculados</h3>
