--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                 <li class="nav-item"><a href='@Url.Action("MisPertenecientes", "Home")' class="nav-link">Mis pertenecientes</a></li>
                 <li class="nav-item"><a href='@Url.Action("Ayuda", "Home")' class="nav-link">Ayuda</a></li>
                 <li class="nav-item"><a href='@Url.Action("Perfil", "Home")' class="nav-link">Mi perfil</a></li>
-                <li class="nav-item"><a href='@Url.Action("LogIn1", "Account")' class="nav-link">Cerrar sesión</a></li>
+                <li class="nav-item"><a href='@Url.Action("CerrarSesion", "Home")' class="nav-link">Cerrar sesión</a></li>
             </ul>
         </div>
     </div>
