--- a/Views/Home/JuegoOrdenarPictogramas.cshtml
+++ b/Views/Home/JuegoOrdenarPictogramas.cshtml
@@ -1,22 +1,34 @@
 
-@{
-    ViewData["Title"] = "JuegoOrdenarPictogramas";
+@* Mostramos el mensaje de error si TempData lo trajo *@
+@if (ViewBag.Mensaje != null)
+{
+    <h3 style="color: red;">@ViewBag.Mensaje</h3>
 }
-<h1>¿QUE ES?</h1>
-<img src="~/imgs/@ViewBag.ImagenPictograma" alt= "amarillo">
 
-<button id="rta" onclick="vaciarResp()"><h2></h2></button>
-<section class= "Respuestas">
-<button id= 1 onclick="resolverImg(@ViewBag.pregunta.Opcion1, 1)"> @ViewBag.pregunta.Opcion1</button>
-<button id= 2 onclick="resolverImg(@ViewBag.pregunta.Opcion2, 2)"> @ViewBag.pregunta.Opcion2</button>
-<button id= 3 onclick="resolverImg(@ViewBag.pregunta.Opcion3, 3)"> @ViewBag.pregunta.Opcion3</button>
-<button id= 4 onclick="resolverImg(@ViewBag.pregunta.Opcion4, 4)"> @ViewBag.pregunta.Opcion4</button>
-<a href= '@Url.Action("resolverQueEs", "home", new{idPregunta = "@ViewBag.pregunta.id", opcionElegida = "@ViewBag.OpcionElegida"})'> Enviar</a>
-</section>
-<a href='@Url.Action("DejarTareaPendiente", "Home",new{idPregunta = "@ViewBag.pregunta.id"})'><button>Continuar más tarde</button></a>
-</div>
-<!--hacer un form hidden y meter la variable ahi-->
-<p id= "rtaFinal">@ViewBag.OpcionElegida</p>
+<form method="post" asp-action="VerificarRespuesta">
+    
+    <input type="hidden" name="idPregunta" value="@ViewBag.Pregunta.IdPregunta" />
+    
+    <div>
+        <h2>¿Qué es?</h2>
+        <img src="@ViewBag.Pregunta.ImagenPictograma" alt="Pregunta">
+    </div>
+    
+    <div class="opciones">
+        <button type="submit" name="opcion" value="@ViewBag.opciones[0]">
+            <img src="@ViewBag.opciones[0]" alt="Opcion 1">
+        </button>
+        <button type="submit" name="opcion" value="@ViewBag.opciones[1]">
+            <img src="@ViewBag.opciones[1]" alt="Opcion 2">
+        </button>
+        <button type="submit" name="opcion" value="@ViewBag.opciones[2]">
+            <img src="@ViewBag.opciones[2]" alt="Opcion 3">
+        </button>
+          <button type="submit" name="opcion" value="@ViewBag.opciones[3]">
+            <img src="@ViewBag.opciones[3]" alt="Opcion 4">
+        </button>
+    </div>
+</form>
 @section Scripts {
     <script src="~/js/juegoPictogramas.js"></script>
 }
