--- a/Views/Home/JuegoOrdenarPictogramas.cshtml
+++ b/Views/Home/JuegoOrdenarPictogramas.cshtml
@@ -1,4 +1,3 @@
-
 @* Mostramos el mensaje de error si TempData lo trajo *@
 @if (ViewBag.Mensaje != null)
 {
@@ -7,28 +6,36 @@
 
 <form method="post" asp-action="VerificarRespuesta">
     
+    @* --- CORRECCIÓN 1: La propiedad se llama 'id' (minúscula) según tu script SQL --- *@
     <input type="hidden" name="idPregunta" value="@ViewBag.Pregunta.IdPregunta" />
     
     <div>
         <h2>¿Qué es?</h2>
-        <img src="@ViewBag.Pregunta.ImagenPictograma" alt="Pregunta">
+
+        @* --- CORRECCIÓN 2: La propiedad se llama 'imagen' (minúscula) --- *@
+        @* (Asumo que tus imágenes están en /wwwroot/Imagenes/ y tienen extensión .png o .jpg) *@
+        <img src="~/Imagenes/@(ViewBag.Pregunta.ImagenPictograma).png" alt="Pregunta">
+        
     </div>
     
     <div class="opciones">
-        <button type="submit" name="opcion" value="@ViewBag.opciones[0]">
-            <img src="@ViewBag.opciones[0]" alt="Opcion 1">
-        </button>
-        <button type="submit" name="opcion" value="@ViewBag.opciones[1]">
-            <img src="@ViewBag.opciones[1]" alt="Opcion 2">
-        </button>
-        <button type="submit" name="opcion" value="@ViewBag.opciones[2]">
-            <img src="@ViewBag.opciones[2]" alt="Opcion 3">
-        </button>
-          <button type="submit" name="opcion" value="@ViewBag.opciones[3]">
-            <img src="@ViewBag.opciones[3]" alt="Opcion 4">
-        </button>
+
+        @* --- CORRECCIÓN 3: Usamos un @foreach para mostrar las 5 opciones --- *@
+        @* Esto toma la lista de palabras (ej. "Comer", "Dormir") de ViewBag.Opciones *@
+
+        @foreach (string palabraOpcion in ViewBag.opciones)
+        {
+            @*
+                El 'value' del botón es la palabra (ej. "Comer") que se enviará al controlador.
+                El texto *dentro* del botón (ej. "Comer") es lo que ve el usuario.
+            *@
+            <button type="submit" name="opcion" value="@palabraOpcion">
+                @palabraOpcion
+            </button>
+        }
     </div>
 </form>
+
 @section Scripts {
     <script src="~/js/juegoPictogramas.js"></script>
 }
