--- a/Views/Home/JuegoOrdenarPictogramas.cshtml
+++ b/Views/Home/JuegoOrdenarPictogramas.cshtml
@@ -34,6 +34,8 @@
             </button>
         }
     </div>
+    <a href='@Url.Action("FinDeJuego", "Home")' class="nav-btn">Continuar mas tarde </a>
+    
 </form>
 
 @section Scripts {
