listo actividades falta que el continuar mande bien

--- a/Views/Home/FindeJuego.cshtml
+++ b/Views/Home/FindeJuego.cshtml
@@ -18,7 +18,7 @@
 
     <div class="botones-fin-juego">
         
-        <a href='@Url.Action("JuegoOrdenarPictogramas", "Home")' class="btn btn-primary" style="margin-right: 10px;">
+        <a href='@Url.Action("JuegoOrdenarPictogramas", "Home", new {continuar = true})' class="btn btn-primary" style="margin-right: 10px;">
             Volver a jugar
         </a>
         
